# Pixeltovoxelprojector

./: CLAUDE.md  GEMINI.md  README.md  app.py  cli.py  config.py  data_models.py  datasets.py  implementations.py  interfaces.py  io_plugins.py  main.py  multi_cam_demo.py  process_image.py  pyproject.toml  ray_voxel.py  registry.py  server.py  setup.py  spacevoxelviewer.py  transforms.py  visualization.py  voxel_grid.py  voxelmotionviewer.py
.claude/: settings.local.json
configs/: test2.json
