[project]
name = "pixeltovoxelprojector"
version = "0.1.0"
description = "Advanced 3D voxel grid generation from image sequences with motion detection"
readme = "README.md"
requires-python = ">=3.13.3"
dependencies = [
    "astropy>=7.1.0",
    "fastapi>=0.116.1",
    "ffmpeg-python>=0.2.0",
    "gradio>=5.38.0",
    "h5py>=3.12.1",
    "imageio>=2.37.0",
    "matplotlib>=3.10.3",
    "mcp>=1.12.0",
    "netcdf4>=1.7.2",
    "numpy>=2.3.1",
    "opencv-python>=4.11.0.86",
    "pillow>=11.3.0",
    "plotly>=6.2.0",
    "pymcubes>=0.1.6",
    "pyvista>=0.45.3",
    "pyyaml>=6.0.2",
    "torch>=2.7.1",
    "torchvision>=0.21.1",
]

[project.scripts]
pixeltovoxel = "main:main"
pixeltovoxel-gradio = "app:main"

[project.entry-points."mcp.server"]
pixeltovoxelprojector = "server:main"
